--- a/notes/rotunno83_notes.tex
+++ b/notes/rotunno83_notes.tex
@@ -69,7 +69,7 @@ Because $a$ was arbitrary we have therefore have
 \end{align*}
 Can assume without loss of generality that $c=0$, because $c\ne 0$ simply adds a constant to $\tilde{\psi}$, and we only care about the $\xi$ and $\zeta$ derivatives of $\tilde{\psi}$. Furthermore, because $g$ represents a fundamental solution for $\tilde{\psi}$ we have $-\frac{\partial g}{\partial \xi} = \tilde{w} = 0$. Using the method of images, we can obtain a solution satisfying this condition from the free space solution by noting that when $\zeta = 0$,
 \begin{align*}
-\frac{1}{4\pi}\frac{1}{\left(\xi-\xi'\right)^2+\left(\zeta-\zeta'\right)^2} 2\xi - \frac{1}{4\pi}\frac{1}{\left(\xi-\xi'\right)^2+\left(-\zeta-\zeta'\right)^2} 2\xi = 0.
+\frac{1}{4\pi}\frac{1}{\left(\xi-\xi'\right)^2+\left(\zeta-\zeta'\right)^2} 2(\xi-\xi') - \frac{1}{4\pi}\frac{1}{\left(\xi-\xi'\right)^2+\left(-\zeta-\zeta'\right)^2} 2(\xi-\xi') = 0.
 \end{align*}
 This suggests taking
 \begin{align*}
